# Selda

./: .gitignore  .sconsign.dblite  BossLevel.json  CMakeLists.txt  Doxyfile  Level1.json  Level2.json  Level3.json  Level4.json  SConstruct  descargar.txt  icon.svg.import  map.json  map2.json  project.godot
.godot/editor/: editor_layout.cfg  filesystem_cache8  filesystem_update4  project_metadata.cfg  script_editor_cache.cfg
Game/: icon.svg.import  project.godot
Game/Enemy/: enemy.gd  enemy.tscn
Game/art/: Arrow.png.import  Bow.png.import  Dungeon_Tileset.png.import  Girl-Sheet.png.import  skeleton_v2_1.png.import  skeleton_v2_2.png.import  skeleton_v2_3.png.import  skeleton_v2_4.png.import
Game/player/: player.gd  player.tscn
Game/scenes/: TileMap.gd  followCam.gd  world.tscn
GithubGodot/: icon.svg.import  project.godot
GithubGodot/art/character/lpc_entry/png/bow/: BELT_leather.png.import  BELT_rope.png.import  BODY_animation.png.import  FEET_plate_armor_shoes.png.import  FEET_shoes_brown.png.import  HANDS_plate_armor_gloves.png.import  HEAD_chain_armor_helmet.png.import  HEAD_chain_armor_hood.png.import  HEAD_hair_blonde.png.import  HEAD_leather_armor_hat.png.import  HEAD_plate_armor_helmet.png.import  HEAD_robe_hood.png.import  LEGS_pants_greenish.png.import  LEGS_plate_armor_pants.png.import  LEGS_robe_skirt.png.import  TORSO_chain_armor_jacket_purple.png.import  TORSO_chain_armor_torso.png.import  TORSO_leather_armor_bracers.png.import  TORSO_leather_armor_shirt_white.png.import  TORSO_leather_armor_shoulders.png.import  TORSO_leather_armor_torso.png.import  TORSO_plate_armor_arms_shoulders.png.import  WEAPON_bow.png.import  (+3 more)
GithubGodot/art/map/RF_Catacombs_v1.0/: candleA_01.png.import  candleA_02.png.import  candleA_03.png.import  candleA_04.png.import  candleB_01.png.import  candleB_02.png.import  candleB_03.png.import  candleB_04.png.import  decorative.png.import  mainlevbuild.png.import  spike_0.png.import  spike_1.png.import  spike_2.png.import  spike_3.png.import  spike_4.png.import  torch_1.png.import  torch_2.png.import  torch_3.png.import  torch_4.png.import
GithubGodot/scenes/: player.tscn  world.tscn
GithubGodot/scripts/: SeldaMainC.gd
Servidor/: CMakeLists.txt  main.cpp
assets/: BossLevel.tmx  Level1.tmx  Level2.tmx  Level3.tmx  Level4.tmx  Structures.tmx  alelos.txt
cpp/: CMakeLists.txt  main.cpp
logging/: registro.log20240507-024023.26516  registro.log20240511-204829.22444  registro.log20240511-204854.3792  registro.log20240511-205124.22824
ray_project/src/: Enemy.cpp  Enemy.h  Mapa.cpp  Mapa.h  Wall.cpp  Wall.h  ball.cpp  main.cpp
selda-dev/: README.md  icon.svg.import  main.tscn  project.godot
src/: Enemy.cpp  Enemy.h  Hitbox.cpp  Hitbox.h  Mapa.cpp  Mapa.h  Nivel.cpp  Nivel.h  ball.cpp  ball.h  main.cpp  register_types.os
src/Algoritmos/: AStar.cpp  AStar.h  Backtrack.cpp  Backtrack.h  Genetico.cpp  Genetico.h
src/DataStructures/: Stack.h  Vector.h
src/Enemy/: Boss.cpp  Boss.h  Chocobos.cpp  Chocobos.h  Enemy.cpp  Enemy.h  Espectro.cpp  Espectro.h  Ojo_Espectral.cpp  Ojo_Espectral.h  Ratones.cpp  Ratones.h  Slime.cpp  Slime.h
src/Lives/: Vidas.cpp  Vidas.h
src/Niveles/: Nivel1.cpp  Nivel1.h  Nivel2.cpp  Nivel2.h  Nivel3.cpp  Nivel3.h  Nivel4.cpp  Nivel4.h  Nivel5.cpp  Nivel5.h
src/Objects/: Cofres.cpp  Cofres.h  Fireball.h  Jarrones.cpp  Jarrones.h  Objetos.cpp  Objetos.h  torch.h
src/resources/: map.tmx
(+138 files in other folders)
